[package]
name = "kvs"
version = "0.1.0"
authors = ["Max Countryman <maxc@me.com>"]
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
structopt = "0.3.0"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.99"
ron = "0.5.1"
tempfile = "3.1.0"
